Smoke does not work with Hi-RES and Sub Frames #42950

Closed
opened 2014-12-18 15:10:55 +01:00 by rahbari · 16 comments
rahbari commented 2014-12-18 15:10:55 +01:00 (Migrated from localhost:3001)

win 8.1
blender 2.72
asus n53sn

for example
a plane as source particle
and smoke source is particle
if use smoke hi res and use sampling sub frame for particle smoke setting
simulate do not work!!!
but if change flow sampling to linear blender do sim
but in full sample mode not work

win 8.1 blender 2.72 asus n53sn ------------------------------- for example a plane as source particle and smoke source is particle if use smoke hi res and use sampling sub frame for particle smoke setting simulate do not work!!! but if change flow sampling to linear blender do sim but in full sample mode not work
rahbari commented 2014-12-18 15:10:55 +01:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
rahbari commented 2014-12-18 15:10:55 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @rahbari

Added subscriber: @rahbari
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Please always attach a .blend file for such issues!

Please always attach a .blend file for such issues!

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

I can't confirm here, can you attach a test file with steps to see the problem?

I can't confirm here, can you attach a test file with steps to see the problem?
rahbari commented 2014-12-18 15:40:23 +01:00 (Migrated from localhost:3001)
Author

for example{F132826}

for example{[F132826](https://archive.blender.org/developer/F132826/smoke.blend)}
Miika Hamalainen was assigned by Antonis Ryakiotakis 2014-12-18 19:47:28 +01:00

Indeed, it seems like the data are not even generated in that case, rendering has the same issue. Miikah to the rescue?

Indeed, it seems like the data are not even generated in that case, rendering has the same issue. Miikah to the rescue?
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Miika Hamalainen was unassigned by Aaron Carlisle 2015-02-06 18:32:58 +01:00
Aaron Carlisle self-assigned this 2015-02-06 18:32:58 +01:00
Member

Added subscriber: @miikah

Added subscriber: @miikah
Aaron Carlisle changed title from smoke to Smoke does not work with Hi-RES and Sub Frames 2015-02-06 18:34:26 +01:00
Aaron Carlisle removed their assignment 2015-02-06 18:34:26 +01:00
Miika Hamalainen was assigned by Aaron Carlisle 2015-02-06 18:34:26 +01:00

Added subscriber: @zeauro

Added subscriber: @zeauro

I don't know if it is a known limitation.
But if Set Size option in Smoke Flow settings is enabled, it works.

I don't know if it is a known limitation. But if Set Size option in Smoke Flow settings is enabled, it works.

Looks like a specific bug for combination of subframes, full sample high res and particle system with "set size" ticked off.

It tries to use full sample version of particles when it isn't available.

Looks like a specific bug for combination of subframes, full sample high res and particle system with "set size" ticked off. It tries to use full sample version of particles when it isn't available.
Author

This issue was referenced by 1b85ca6fc0

This issue was referenced by 1b85ca6fc0fc6c32fa8d66ae4c4160317ae0677e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1b85ca6fc0.

Closed by commit 1b85ca6fc0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42950
No description provided.