Fix T42950: Smoke particle flow doesn't work with high res and subframes unless "set size" option is ticked.